--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+arboard = "3.6.1"
+base64 = "0.22.1"
+chrono = { version = "0.4.42", features = ["serde"] }
+crossterm = "0.29.0"
+ctrlc = "3.5.0"
+dirs = "6.0.0"
+image = "0.25.8"
+ratatui = "0.29.0"
+rdev = "0.5.3"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+signal-hook = { version = "0.3.18", features = ["iterator"] }
